# Zappy

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile.test  Jekinsfile  Jenkinsfile  Makefile  README.md  commit-msg  vgoutput  zappy_ai  zappy_gui  zappy_server  zozo
gui/: CMakeLists.txt
gui/docs/: README.md
gui/src/: CMakeLists.txt  GUI.hpp  HelloWorld.cpp  main.cpp
gui/src/assets/clouds/: CloudLarge2.mtl
gui/src/assets/pdr/: trashcan.mtl
gui/src/assets/pgt/: chest.mtl
gui/src/assets/pic/: cauldrin.mtl
gui/src/assets/trantorian/: trantorian.mtl
gui/src/display/: Window.cpp  Window.hpp
gui/src/exception/: ArgsException.cpp  ArgsException.hpp  ClientException.cpp  ClientException.hpp  SocketException.cpp  SocketException.hpp
gui/src/exception/abstract/: AException.cpp  AException.hpp
gui/src/exception/interface/: IException.hpp
gui/src/food/: Food.cpp  Food.hpp
gui/src/game/: Game.cpp  Game.hpp
gui/src/game/display/: Display.cpp  Display.hpp
gui/src/game/events/: Events.cpp  Events.hpp
gui/src/handle_args/: HandleArgs.cpp  HandleArgs.hpp
gui/src/mocks/: MockEgg.cpp  MockEgg.hpp  MockTeams.cpp  MockTeams.hpp  MockTrantorians.cpp  MockTrantorians.hpp
gui/src/network/: Client.cpp  Client.hpp
gui/src/network/client/: Client.cpp  Client.hpp
gui/src/network/command/: CommandBct.cpp  CommandBctReceive.cpp  CommandBctReceive.hpp  CommandMapSize.cpp  CommandMapSize.hpp  CommandMapSizeResponse.cpp  CommandMapSizeResponse.hpp  CommandTeamName.cpp  CommandTeamName.hpp
gui/src/network/command/bct/: CommandBct.hpp  CommandBctReceive.cpp
gui/src/network/command/factory/: CommandFactory.cpp  CommandFactory.hpp
gui/src/network/command/interface/: ICommand.hpp  ITeamsCommand.hpp  IWorldCommand.hpp
gui/src/network/command/msz/: CommandMapSize.cpp  CommandMapSize.hpp  CommandMapSizeResponse.cpp
gui/src/network/command/pdi/: CommandDthOfPlyr.cpp  CommandDthOfPlyr.hpp
gui/src/network/command/pex/: CommandExpulsion.cpp  CommandExpulsion.hpp
gui/src/network/command/ppo/: CommandPpo.cpp  CommandPpo.hpp  CommandPpoReceive.cpp  CommandPpoReceive.hpp
gui/src/network/command/tna/: CommandTna.cpp  CommandTna.hpp  CommandTnaReceive.cpp  CommandTnaReceive.hpp
gui/src/network/commands/bct/: CommandBCT.cpp  CommandBCT.hpp
gui/src/network/commands/ebo/: CommandEBO.cpp  CommandEBO.hpp
gui/src/network/commands/edi/: CommandEDI.cpp  CommandEDI.hpp
gui/src/network/commands/enw/: CommandENW.cpp  CommandENW.hpp
gui/src/network/commands/factory/: CommandFactory.cpp  CommandFactory.hpp
gui/src/network/commands/interface/: ICommand.hpp
gui/src/network/commands/msz/: CommandMSZ.cpp  CommandMSZ.hpp
gui/src/network/commands/pbc/: CommandPBC.cpp  CommandPBC.hpp
gui/src/network/commands/pdi/: CommandPDI.cpp  CommandPDI.hpp
gui/src/network/commands/pdr/: CommandPDR.cpp  CommandPDR.hpp
gui/src/network/commands/pex/: CommandPEX.cpp  CommandPEX.hpp
gui/src/network/commands/pfk/: CommandPFK.cpp  CommandPFK.hpp
gui/src/network/commands/pgt/: CommandPGT.cpp  CommandPGT.hpp
gui/src/network/commands/pic/: CommandPIC.cpp  CommandPIC.hpp
gui/src/network/commands/pie/: CommandPIE.cpp  CommandPIE.hpp
gui/src/network/commands/pin/: CommandPIN.cpp  CommandPIN.hpp
gui/src/network/commands/plv/: CommandPLV.cpp  (+1 more)
gui/src/network/protocol/: ProtocolHandler.cpp  ProtocolHandler.hpp
gui/src/network/protocol_handler/: ProtocolHandler.cpp  ProtocolHandler.hpp
gui/src/network/socket/: ASocket.hpp  TCPSocket.cpp  TCPSocket.hpp
gui/src/objects/abstracts/: AObject.cpp  AObject.hpp  AStone.cpp  AStone.hpp
gui/src/objects/eggs/: Egg.cpp  Egg.hpp
gui/src/objects/food/: Food.cpp  Food.hpp
gui/src/objects/interface/: IObject.hpp
gui/src/objects/stones/: Deraumere.cpp  Deraumere.hpp  Linemate.cpp  Linemate.hpp  Mendiane.cpp  Mendiane.hpp  Phiras.cpp  Phiras.hpp  Sibur.cpp  Sibur.hpp  Thystame.cpp  Thystame.hpp
gui/src/position/: Position.cpp  Position.hpp
gui/src/stones/: Deraumere.cpp  Deraumere.hpp  Linemate.cpp  Linemate.hpp  Mendiane.cpp  Mendiane.hpp  Phiras.cpp  Phiras.hpp  Sibur.cpp  Sibur.hpp  Thystame.cpp  Thystame.hpp
gui/src/stones/abstract/: AStone.cpp  AStone.hpp
gui/src/tiles/: Tile.cpp  Tile.hpp
gui/src/trantorians/: Actions.cpp  Actions.hpp  Teams.cpp  Teams.hpp  Trantorian.cpp  Trantorian.hpp  Tribes.cpp  Tribes.hpp
gui/src/world/: World.cpp  World.hpp
server/: CMakeLists.txt
server/include/: CMakeLists.txt  actions.h  array.h  buffer.h  client.h  egg.h  eggs.h  game.h  gui.h  hashmap.h  incantation.h  inventory.h  map.h  number.h  server.h  team.h  trantorian.h
server/include/ia_actions/: broadcast.h  look.h
server/src/: CMakeLists.txt  array.c  array_bis.c  buffer.c  client.c  egg.c  function.c  game.c  get_ia_with_fd.c  hashmap_bucket.c  hashmap_op.c  hashmap_others.c  hello_world.c  inventory.c  main.c  manage_teams_places.c  map.c  map_bis.c  map_init.c  map_utils.c  number.c  server.c  server_bis.c  shutdown_server.c  team.c  trantorian.c
server/src/gui_commands/: basic_log.c  broadcast.c  egg_log.c  gui.c  map_info.c  map_log.c  pic_log.c  player_info.c  player_log.c  ressource_log.c  time_log.c
server/src/ia_actions/: broadcast.c  connect_nbr.c  eject.c  fork.c  forward.c  game_action.c  incantation.c  incantation_bis.c  inventory.c  left.c  look.c  right.c  set.c  take.c
server/src/ia_actions/look/: look.c  look_direction.c  look_utils.c
server/src/server/: server.c  server_connection.c  server_handle_client.c  server_init.c  server_shutdown.c
server/tests/: CMakeLists.txt  hello_world_spec.cpp  main.cpp
tests/: CMakeLists.txt
tests/assets/egg/: egg.mtl
tests/gui/: CMakeLists.txt  EggsSpec.cpp  ObjectsDensitySpec.cpp  ObjectsPositionsSpec.cpp  ObjectsQuantitySpec.cpp  TeamsSpec.cpp  TilesSpec.cpp  TrantorianMethods.cpp  TribesMethods.cpp  WorldSpec.cpp  eggs_spec.cpp  get_objects_density_spec.cpp  handle_args_spec.cpp  hello_world_spec.cpp  trantorian_methods.cpp  world_spec.cpp
tests/server/: CMakeLists.txt  array_tests.cpp  buffer_tests.cpp  hello_world_spec.cpp  test_server_network.cpp
(+48 files in other folders)
